Further progress on Issue #59 - Read-Variable commandlet. - Tooltip support for fields - String can now be hanfdles as Combobox if "Options" parameter is provided - Pipe separated, alternating Human-readable/value - Item type selector can specify "Root" to limit the scope of the item selector. - L&F improved

--- a/Console/Styles/VariablePrompt.css
+++ b/Console/Styles/VariablePrompt.css
@@ -46,5 +46,10 @@
 .scContentControl
 {
     border: solid 1px ButtonShadow;
-    padding: 2px;
+    padding-left: 2px;
+}
+
+.wk .scComboboxEdit
+{
+    padding-left: 2px;
 }
